# GiCOPS

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  config.hpp.in
.github/workflows/: cccp.yml
cmake/Templates/: aamasses.hpp.in  aliases.hpp.in  common.hpp.in  config.hpp.in
samples/sample_data/: 14Sep18_Olsen_S01_extracted.ms2  14Sep18_Olson_S01_extracted.ms2  summary.io
samples/sample_db/: 10.peps  11.peps  12.peps  13.peps  14.peps  15.peps  16.peps  17.peps  18.peps  19.peps  20.peps  21.peps  22.peps  23.peps  24.peps  25.peps  26.peps  27.peps  28.peps  29.peps  30.peps  31.peps  32.peps  33.peps  34.peps  35.peps  36.peps  37.peps  38.peps  39.peps  40.peps  6.peps  7.peps  8.peps  9.peps
source/: CMakeLists.txt
source/app/: CMakeLists.txt  hicops.cpp  hicops.hpp
source/apps/: CMakeLists.txt
source/apps/argp/: CMakeLists.txt  argp.cpp  argp.hpp
source/apps/counter/: CMakeLists.txt  app.cpp  counter.cpp  counter.hpp  modcounter.cpp
source/apps/gicops/: CMakeLists.txt  gicops.cpp  gicops.hpp
source/apps/hicops/: CMakeLists.txt  hicops.cpp
source/apps/testapp/: CMakeLists.txt  algos.cuh  testapp.cpp  testapp.hpp
source/argp/: CMakeLists.txt  argp.cpp  argp.hpp
source/core/: CMakeLists.txt  dslim.cpp  dslim_fileout.cpp  dslim_query.cpp  dslim_score.cpp  dslim_scproc.cpp  expeRT.cpp  lbe_internal.cpp  mods.cpp  ms2prep.cpp  msquery.cpp  scheduler.cpp  utils.cpp
source/core/cuda/superstep1/: kernel.cpp  kernel.cu
source/core/cuda/superstep2/: kernel.cu
source/core/cuda/superstep3/: algorithms.cu  kernel.cu
source/core/cuda/superstep4/: algorithms.cu  kernel.cu
source/core/include/: common.h  dslim.h  dslim_comm.h  dslim_fileout.h  dslim_score.h  expeRT.h  hicops_mpi.hpp  lbe.h  lwbuff.h  lwqueue.h  lwvector.h  minheap.h  mods.h  ms2prep.hpp  msquery.h  msquery.hpp  scheduler.h  slm_dsts.h  utils.h
source/core/include/cuda/: constants.cuh  driver.hpp
source/core/include/cuda/superstep1/: kernel.hpp
source/core/include/cuda/superstep2/: gpu_arraysort.hpp  kernel.hpp
source/core/include/cuda/superstep3/: kernel.hpp
source/core/include/cuda/superstep4/: kernel.hpp
source/counter/: CMakeLists.txt  app.cpp  counter.cpp  counter.hpp
tools/ms2prep/: extractms2.py
tools/runtime/: hicops_expanse.py  psm2excel.py  psm2tsv.py
