
#----------------------------------------------------------------------------------------#
#   hicops source
#----------------------------------------------------------------------------------------#

message(STATUS "Adding core...")
add_subdirectory(core)

#----------------------------------------------------------------------------------------#
#   hicops apps
#----------------------------------------------------------------------------------------#

message(STATUS "Adding apps...")
add_subdirectory(apps)
